--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meine Webseite</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f4f8;
+            color: #333;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            color: #007acc;
+        }
+        p {
+            font-size: 1.2em;
+        }
+        .box {
+            background: white;
+            padding: 20px;
+            margin: auto;
+            max-width: 500px;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        }
+    </style>
 </head>
 <body>
-    <h1>Willkommen auf meiner Webseite!</h1>
-    <p>Diese Seite ist mit GitHub Pages gehostet.</p>
+    <div class="box">
+        <h1>Willkommen auf meiner Webseite!</h1>
+        <p>Diese Seite ist mit GitHub Pages gehostet.</p>
+    </div>
 </body>
 </html>
